# bfinancial-rs

./: .gitignore  Cargo.toml  DOCS-EN.md  DOCS-ES.md  DOCS-PT.md  EXAMPLES-EN.md  EXAMPLES-ES.md  EXAMPLES-PT.md  EXEMPLES-PT.md  LICENSE  README.md  a.json  x.sh
docs/: client.md  payments.md
docs/client/: login.md
docs/models/: c_card.md  c_pix.md  payment_create.md  resp_data.md  response.md  s_card.md  s_pix.md
docs/models/response/: access.md  check.md
docs/payments/: create.md  obtain.md
src/: lib.rs  payments.rs
src/models/client/: auth.rs  mod.rs  payment.rs  product.rs
src/models/server/: payment.rs
src/utils/: status.rs
tests/: automation.rs
tests/advanced/: Cargo.toml
tests/advanced/src/: main.rs
